--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy":"ng build --prod --base-href https://debugmodedotnet.github.io/ecolerim/  && angular-cli-ghpages --branch gh-pages"
+    "deploy": "ng build --prod --base-href https://debugmodedotnet.github.io/ecolerim/  && angular-cli-ghpages --branch gh-pages"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.7",
+    "@angular/animations": "^9.1.1",
+    "@angular/cdk": "~9.2.0-next.0",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.7",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
